--- a/_common/styleguide/styleguide.css
+++ b/_common/styleguide/styleguide.css
@@ -9,7 +9,11 @@
 .g-wrap .g-example-wrap .g-example:has(div) {display: flex;flex-direction: column;gap: 1rem;}
 .g-wrap .g-example-wrap .g-example > strong {color:var(--krds-light-color-text-primary)}
 .g-wrap .g-example-wrap .g-example > strong:not(strong:first-child) {margin-top:2rem}
-.g-wrap .g-example-wrap .g-example .g-example-inner {display: flex;flex-wrap: wrap;gap: 2rem}
+.g-wrap .g-example-wrap .g-example .g-example-inner {display: flex;flex-wrap: wrap;gap: 2rem;align-items: center;}
+.g-wrap .g-example-wrap .g-example .g-example-inner.flex-dire-col {gap:1rem;align-items: flex-start;}
+.g-wrap .g-example-wrap .g-example .g-example-inner > div {display:flex;align-items: center;}
+.g-wrap .g-example-wrap .g-example .g-example-inner .subtitle {min-width: 10rem;color:var(--krds-color-light-gray-50);margin-right:.5rem;}
+
 
 .g-wrap .g-code-wrap {display: table;table-layout: fixed; width: 100%;margin-top: var(--krds-pc-gap-layout-image-text-medium);border: none;}
 .g-wrap .g-code-wrap.krds-accordion {margin-top: var(--krds-pc-gap-layout-title-body-medium);}
